--- a/src/encapsulate/src/app/tabs/tabs.page.html
+++ b/src/encapsulate/src/app/tabs/tabs.page.html
@@ -1,9 +1,9 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+    <ion-tab-button tab="noise">
+      <ion-icon name="stats"></ion-icon>
+      <ion-label>noise</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
