--- a/src/encapsulate/src/app/tab3/tab3.page.html
+++ b/src/encapsulate/src/app/tab3/tab3.page.html
@@ -1,9 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab Three
+      about
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <p>an experiment in web audio synthesis for the purpose of enhancing focus.</p>
+  <p>by james curran, --minusminus</p>
+</ion-content>
