--- a/src/encapsulate/src/app/tabs/tabs.page.html
+++ b/src/encapsulate/src/app/tabs/tabs.page.html
@@ -7,13 +7,13 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-icon name="pulse"></ion-icon>
+      <ion-label>drone</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
+      <ion-icon name="walk"></ion-icon>
+      <ion-label>about</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
